<resources>
    <string name="app_name">HardwareInfo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_atividade">HomeAtividade</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_resumo">Resumo</string>
    <string name="title_processador">Processador</string>
    <string name="title_sensores">Sensores</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="app_intro">teste</string>
    <string name="app_intro_skip_button">PULAR</string>
    <string name="app_intro_done_button">PRONTO</string>
    <string name="device">Dispositivo</string>
    <string name="os">Sistema operacional</string>
    <string name="sensor">Sensores</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="battery">Bateria</string>
    <string name="network">Internet</string>
    <string name="sim">SIM</string>
    <string name="display">Tela</string>
    <string name="camera">Camera</string>
    <string name="storage">Memoria</string>
    <string name="features">Extras</string>
    <string name="user_apps">Apps do Usuário</string>
    <string name="system_apps">Apps do Sistema</string>
    <string name="about_us">Sobre</string>
    <string name="expanse_the_world">Expanse the World</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="connect_us">Connect Us</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="board">Board</string>
    <string name="hardware">Hardware</string>
    <string name="serial_no">Serial No</string>
    <string name="android_id">Android ID</string>
    <string name="screen_resolution">Screen Resolution</string>
    <string name="boot_loader">Boot Loader</string>
    <string name="user">User</string>
    <string name="host">Host</string>
    <string name="imei_number">IMEI Number</string>
    <string name="version">Version</string>
    <string name="version_name">Version Name</string>
    <string name="api_level">API Level</string>
    <string name="build_id">Build ID</string>
    <string name="build_name">Build Time</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="honeycomb">Honeycomb</string>
    <string name="release_date">Release Date:\u0020</string>
    <string name="ics">Ice Cream Sandwich</string>
    <string name="jellybean">Jelly Bean</string>
    <string name="kitkat">Kitkat</string>
    <string name="lollipop">Lollipop</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="nougat">Nougat</string>
    <string name="oreo">Oreo</string>
    <string name="unknown_version">Unknown version</string>
    <string name="battery_type">Battery Type</string>
    <string name="power_source">Power Source</string>
    <string name="battery_temperature">Battery Temperature </string>
    <string name="battery_voltage">Battery Voltage </string>
    <string name="battery_scale">Battery Scale </string>
    <string name="battery_health">Battery Health </string>
    <string name="ac_power">AC Power</string>
    <string name="good">Good</string>
    <string name="failed">Failed</string>
    <string name="dead">Dead</string>
    <string name="over_voltage">Overvoltage</string>
    <string name="cold">Cold</string>
    <string name="over_heated">Overheated</string>
    <string name="unknown">Unknown</string>
    <string name="processor_label">Processor</string>
    <string name="processor">processor</string>
    <string name="cpu_t">CPU</string>
    <string name="ram_m">RAM</string>
    <string name="used">Used</string>
    <string name="system_and_apps">System and Apps</string>
    <string name="available_ram">Available RAM</string>
    <string name="total_ram_space">Total RAM Space</string>
    <string name="cpu_model">CPU Model</string>
    <string name="cores">Cores</string>
    <string name="actual">Actual RAM</string>
    <string name="physical_available_ram">Physical Available RAM</string>
    <string name="abi">ABI</string>
    <string name="cpu_variant">CPU Variant</string>
    <string name="serial">Serial</string>
    <string name="cpu_implementer">CPU Implementer</string>
    <string name="cpu_part">CPU Part</string>
    <string name="cpu_revision">CPU Revision</string>
    <string name="feature">Features</string>
    <string name="gl_renderer">GL_Renderer</string>
    <string name="gl_vendor">GL_Vendor</string>
    <string name="gl_version">GL_Version</string>
    <string name="gl_extension">GL_Extension</string>
    <string name="sensors">Sensors</string>
    <string name="available_sensor">Sensor available on your Device</string>
    <string name="available_sensors">Sensors available on your Device</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="int_type">Sensor Type</string>
    <string name="vendor">Vendor</string>
    <string name="resolution">Resolution</string>
    <string name="power">Power</string>
    <string name="maximum_range">Maximum Range</string>
    <string name="is_dynamic">isDynamicSensor</string>
    <string name="is_wakeup_sensor">isWakeUpSensor</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="reporting_mode">Reporting Mode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="geomagnetic_field">Geomagnetic field: \n\n</string>
    <string name="proximity_sensor">Proximity:\u0020</string>
    <string name="humidity_sensor">Humidity:\u0020</string>
    <string name="illuminance">Illuminance:\u0020</string>
    <string name="steps">Steps:\u0020</string>
    <string name="temperature_sensor">Temperature:\u0020</string>
    <string name="absolute_humidity_temperature_sensor">Absolute Humidity at Temperature:\u0020</string>
    <string name="due_point_temperature">Dew point:\u0020</string>
    <string name="angular_speed">Angular speed \n\n</string>
    <string name="mu_tesla">\u0020µT</string>
    <string name="degree_icon">\u0020\u00B0</string>
    <string name="rad">\u0020rad/s</string>
    <string name="cm">\u0020cm</string>
    <string name="percentage">%</string>
    <string name="lx">\u0020lx</string>
    <string name="ma">\u0020mA</string>
    <string name="ms">\u0020m/s</string>
    <string name="pressure">Pressure:\u0020</string>
    <string name="hpa">\u0020hPa</string>
    <string name="px">\u0020px</string>
    <string name="fps">\u0020fps</string>
    <string name="x">\u0020x\u0020</string>
    <string name="dp">\u0020dp</string>
    <string name="connection_status">Connection Status</string>
    <string name="data_type">Data Type</string>
    <string name="network_type">Network Type</string>
    <string name="ip_address">IP Address</string>
    <string name="mac_address">MAC Address</string>
    <string name="ssid">SSID</string>
    <string name="link_speed">Link Speed</string>
    <string name="wifi">WiFi</string>
    <string name="unavailable">Unavailable</string>
    <string name="connect">Connected</string>
    <string name="disconnect">Not connected</string>
    <string name="mbps">Mbps</string>
    <string name="wifi_direct">WiFi Direct</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_le">Bluetooth LE</string>
    <string name="gps">GPS</string>
    <string name="camera_flash">Camera Flash</string>
    <string name="camera_front">Camera Front</string>
    <string name="microphone">Microphone</string>
    <string name="nfc">NFC</string>
    <string name="usb_host">USB Host</string>
    <string name="usb_accessory">USB Accessory</string>
    <string name="multitouch">Multitouch</string>
    <string name="audio_low_latency">Audio low-latency</string>
    <string name="audio_output">Audio Output</string>
    <string name="professional_audio">Professional Audio</string>
    <string name="consumer_ir">Consumer IR</string>
    <string name="gamepad_support">Gamepad Support</string>
    <string name="hifi_sensor">HIFI Sensor</string>
    <string name="printing">printing</string>
    <string name="cdma">cdma</string>
    <string name="gsm">GSM</string>
    <string name="app_widgets">App Widgets</string>
    <string name="sip">SIP</string>
    <string name="sip_based_voip">SIP-based VOIP</string>
    <string name="available">Available</string>
    <string name="not_supported">Not Supported</string>
    <string name="please_provide_camera_perm">Please provide camera permission to view camera details. App-></string>
    <string name="ram_usage">RAM Usage</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="used_memory">Used:</string>
    <string name="free">Free:</string>
    <string name="total">Total:</string>
    <string name="screen">Screen</string>
    <string name="density">Density</string>
    <string name="screen_size">Screen size</string>
    <string name="screen_display_bucket">Display bucket</string>
    <string name="screen_dpi">Display dpi</string>
    <string name="screen_logical_density">Logical density</string>
    <string name="screen_scaled_density">Scaled density</string>
    <string name="screen_usable_width">Usable width</string>
    <string name="screen_usable_height">Usable height</string>
    <string name="screen_total_width">Screen width</string>
    <string name="screen_total_height">Screen height</string>
    <string name="density_independent_width">Density independent width</string>
    <string name="density_independent_height">Density independent height</string>
    <string name="screen_physical_size">Physical size</string>
    <string name="default_screen_orientation">Default orientation</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_undefined">Undefined</string>
    <string name="inches">\u0020inches</string>
    <string name="max_gpu_texture_size">Max GPU texture size</string>
    <string name="refresh">Refresh rate</string>
    <string name="xdpi">xdpi</string>
    <string name="ydpi">ydpi</string>
    <string name="name">Name</string>
    <string name="ldpi">Ldpi</string>
    <string name="mdpi">mdpi</string>
    <string name="hdpi">hdpi</string>
    <string name="xhdpi">xhdpi</string>
    <string name="xxhdpi">xxhdpi</string>
    <string name="xxxhdpi">xxxhdpi</string>
    <string name="dpi">\u0020dpi</string>
    <string name="bluetooth_name">Name</string>
    <string name="bluetooth_address">Address</string>
    <string name="scan_mode">Scan Mode</string>
    <string name="bluetooth_state">Bluetooth State</string>
    <string name="bluetooth_discovery">Bluetooth Discovery</string>
    <string name="turn_on_bluetooth">Turn on bluetooth</string>
    <string name="turn_off_bluetooth">Turn off bluetooth</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="developer_info">Developer Information</string>
</resources>