<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dispositivo"
            android:icon="@drawable/ic_home"
            android:title="@string/device" />
        <item
            android:id="@+id/nav_os"
            android:icon="@drawable/ic_android_logo"
            android:title="@string/os" />

        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_speedometer"
            android:title="@string/sensor" />

        <item
            android:id="@+id/nav_cpu"
            android:icon="@drawable/ic_processor"
            android:title="@string/processor_label" />

        <item
            android:id="@+id/nav_batteria"
            android:icon="@drawable/ic_battery_new"
            android:title="@string/battery" />

        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/ic_wifi_signal"
            android:title="@string/network" />

        <item
            android:id="@+id/nav_sim"
            android:icon="@drawable/ic_sim"
            android:title="@string/sim" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_lens"
            android:title="@string/camera" />

        <item
            android:id="@+id/nav_memoria"
            android:icon="@drawable/ic_database"
            android:title="@string/storage" />

        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/bluetooth" />

        <item
            android:id="@+id/nav_tela"
            android:icon="@drawable/ic_screens"
            android:title="@string/display" />

        <item
            android:id="@+id/nav_extra"
            android:icon="@drawable/ic_snowflake"
            android:title="@string/features" />

        <item
            android:id="@+id/nav_user_apps"
            android:icon="@drawable/ic_user"
            android:title="@string/user_apps" />

        <item
            android:id="@+id/nav_system_apps"
            android:icon="@drawable/ic_solar_system"
            android:title="@string/system_apps" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_information"
            android:title="@string/about_us" />

    </group>
</menu>